# sv30_ai

./: .dockerignore  .env  .env.template  .gitignore  .pdm-python  Dockerfile  README.md  config.py  main.py  pyproject.toml
.github/workflows/: docker.yml
tests/: test_main.py
utils/: chatgpt.md  infer.py  sv30.py
